--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,39 @@
+# Dependencies
+node_modules/
+
+# Environment variables
 .env
-node_modules
+.env.local
+.env.production
+.env.*.local
+
+# Logs
+*.log
+npm-debug.log*
+logs/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Uploads
+uploads/*
+!uploads/.gitkeep
+
+# Build
+dist/
+build/
+
+# Azure
+.azure/
+.deployment
+
+# Testing
+coverage/
+.nyc_output/
