--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,32 @@
 {
-  "name": "backend",
+  "name": "interview-ai-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend API for Interview AI - MERN stack interview preparation platform",
+  "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
     "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "test-email": "node test-email.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "interview",
+    "ai",
+    "mern",
+    "express",
+    "mongodb",
+    "azure"
+  ],
+  "author": "Nirdesh Bhesaniya",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nirdeshbhesaniya/InterviewAI2.0.git"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@sendgrid/mail": "^8.1.6",
