--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "frontend",
+  "name": "interview-ai-frontend",
+  "version": "1.0.0",
+  "description": "Frontend for Interview AI - React-based interview preparation platform",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "author": "Nirdesh Bhesaniya",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nirdeshbhesaniya/InterviewAI2.0.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
