--- a/.github/workflows/main_interviewai.yml
+++ b/.github/workflows/main_interviewai.yml
@@ -17,15 +17,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18.x'
-
-      - name: Install backend dependencies
-        run: npm install
-        working-directory: backend
-
+      # 🔐 Azure Login (OIDC)
       - name: Azure Login
         uses: azure/login@v2
         with:
@@ -33,6 +25,7 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F54238CE930349F8893D57DED095957E }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B30B367FC5434AE0A89D8CC2E0888D9F }}
 
+      # 🚀 Deploy backend folder directly
       - name: Deploy Backend to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
