--- a/.github/workflows/main_interviewai-server.yml
+++ b/.github/workflows/main_interviewai-server.yml
@@ -20,12 +20,9 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: Install dependencies & build (backend)
+      - name: Install dependencies (backend)
         working-directory: backend
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+        run: npm install
 
       - name: Upload backend artifact
         uses: actions/upload-artifact@v4
