--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "node server.js",
+    "build": "echo Build complete",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-email": "node test-email.js"
