--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,10 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@langchain/community": "^0.3.59",
+    "@langchain/core": "^0.3.80",
+    "@langchain/langgraph": "^0.2.74",
+    "@langchain/openai": "^0.3.17",
     "@sendgrid/mail": "^8.1.6",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -39,13 +43,15 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.37",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
     "openai": "^5.1.1",
     "resend": "^4.6.0",
     "streamifier": "^0.1.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
