--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.1",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^3.6.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0"
