--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.37",
