--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "openai": "^5.1.1",
+    "redis": "^5.10.0",
     "resend": "^4.6.0",
     "streamifier": "^0.1.1",
     "uuid": "^11.1.0",
